# xfe

./: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  buildrun  config.h  config.h.in  configure  configure.ac  iconlinks.sh  installrun  org.xfe.root.policy.in.in  uninstall-xfe  xfa.1  xfa.desktop.in.in  xfe.1  xfe.desktop.in.in  xfe.spec  xferc.in  xfi.1  xfi.desktop.in.in  xfp.1  xfp.desktop.in.in  xfw.1  xfw.desktop.in.in
automount/: Makefile.am  Makefile.in  xfe-automount.cpp
debian/: README.Debian  autoreconf.after  autoreconf.before  changelog  control  copyright  files  menu  rules  xfe.docs  xfe.install  xfe.postinst.debhelper  xfe.postrm.debhelper  xfe.substvars
icons/: Makefile  Makefile.am  Makefile.in
icons/apps/: Makefile  Makefile.am  Makefile.in  xfa.xpm
icons/apps-scalable/: Makefile  Makefile.am  Makefile.in
icons/default-theme/: Makefile  Makefile.am  Makefile.in
icons/gnome-theme/: Makefile  Makefile.in
icons/kde-theme/: Makefile  Makefile.in
icons/xfce-theme/: Makefile  Makefile.in
intl/: plural.c
libsn/: sn-common.c  sn-common.h  sn-internals.h  sn-launchee.c  sn-launcher.c  sn-monitor.c  sn-xmessages.c  sn-xmessages.h  sn-xutils.c  sn-xutils.h
m4/: ChangeLog  Makefile.am  Makefile.in
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  bs.gmo  bs.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  es.gmo  es.po  es_AR.gmo  es_AR.po  es_CO.gmo  es_CO.po  fi.gmo  fi.po  fr.gmo  fr.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  nl.gmo  nl.po  no.gmo  no.po  pl.gmo  pl.po  pt_BR.gmo  (+14 more)
src/: ArchInputDialog.cpp  ArchInputDialog.h  BookmarkDialog.cpp  BookmarkDialog.h  Bookmarks.cpp  Bookmarks.h  BrowseInputDialog.cpp  BrowseInputDialog.h  ColorSelector.cpp  ColorSelector.h  ComboBox.cpp  ComboBox.h  CommandWindow.cpp  CommandWindow.h  ConnectDialog.cpp  ConnectDialog.h  DialogBox.cpp  DialogBox.h  DirHistBox.cpp  DirHistBox.h  DirList.cpp  DirList.h  DirPanel.cpp  DirPanel.h  ExecuteBox.cpp  ExecuteBox.h  File.cpp  File.h  FileDialog.cpp  FileDialog.h  FileDict.cpp  FileDict.h  FileList.cpp  FileList.h  FilePanel.cpp  FilePanel.h  FontDialog.cpp  FontDialog.h  HistInputDialog.cpp  HistInputDialog.h  (+63 more)
st/: arg.h  config.h  st.c  st.h  win.h  x.c  x.h
